--- a/03-css/style.css
+++ b/03-css/style.css
@@ -2,6 +2,21 @@
     image-rendering: pixelated;
 }
 
+/* scrollbar */
+::-webkit-scrollbar {
+    width: 0;
+}
+
+/* scroll track */
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+/* scroll handle */
+::-webkit-scrollbar-thumb {
+    background: none;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -13,6 +28,7 @@ body {
     font-family: Helvetica, Arial, sans-serif;
     font-size: 14px;
 }
+
 
 .bg-color {
     background-color: #bcbcbc;
@@ -32,7 +48,7 @@ body {
 
 /* topbar section */
 .topbar {
-    position: relative;
+    position: fixed;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -76,22 +92,8 @@ body {
 }
 
 .feature-overflow {
-    overflow-y: auto;
-}
-
-/* scrollbar */
-::-webkit-scrollbar {
-    width: 0;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-    background: transparent;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-    background: none;
+    padding: 5px 0;
+    overflow-y: scroll;
 }
 
 .feature-box {
@@ -139,6 +141,7 @@ canvas {
     justify-content: flex-start;
     align-items: center;
     flex-flow: row nowrap;
+    overflow-y: auto;
 }
 
 /* color picker section */
@@ -182,7 +185,6 @@ canvas {
     /* z-index, global style */
 }
 
-
 .selected-wrapper {
     display: flex;
     flex-flow: column wrap;
@@ -205,7 +207,7 @@ canvas {
 }
 
 .selected-color:hover {
-    border: 2px solid #e4e2e2;
+    border: 3px solid #cccaca;
 }
 
 #picker-1 {background-color: #000000;} /* global style */
