--- a/03-css/style.css
+++ b/03-css/style.css
@@ -182,22 +182,29 @@ canvas {
 
 .current-color {
     position: absolute;
-    width: 15px;
-    height: 15px;
+    width: 17px;
+    height: 17px;
     border: 1.5px solid #cfcfcf;
     border-style: ridge;
 }
 
+.default-index {
+    z-index: 1;
+}
+
+.add-index {
+    z-index: 10;
+}
+
 #color-a {
-    top: 2px;
-    left: 2px;
+    top: 3px;
+    left: 3px;
     background-color: #E87663; /* global style !!! */
-    z-index: 1; /* default priority */ 
 }
 
 #color-b {
-    bottom: 2px;
-    right: 2px;
+    bottom: 3px;
+    right: 3px;
     background-color: #816556; /* global style !!!*/
 }
 
