--- a/03-css/style.css
+++ b/03-css/style.css
@@ -199,13 +199,13 @@ canvas {
 #color-a {
     top: 3px;
     left: 3px;
-    background-color: #E87663; /* global style !!! */
+    background-color: #fff; /* global style !!! */
 }
 
 #color-b {
     bottom: 3px;
     right: 3px;
-    background-color: #816556; /* global style !!!*/
+    background-color: #000; /* global style !!!*/
 }
 
 .selected-wrapper {
