--- a/03-css/style.css
+++ b/03-css/style.css
@@ -199,13 +199,13 @@ canvas {
 #color-a {
     top: 3px;
     left: 3px;
-    background-color: #fff; /* global style !!! */
+    background-color: #fff; /* default color !!! */
 }
 
 #color-b {
     bottom: 3px;
     right: 3px;
-    background-color: #000; /* global style !!!*/
+    background-color: #000; /* default color !!!*/
 }
 
 .selected-wrapper {
@@ -270,7 +270,19 @@ canvas {
     height: 100%;
 }
 
+.textbox-wrapper {
+    padding-left: 50px;
+    display: none;
+}
+
+#text_cnv {
+    height: 22px;
+}
+
+
+
 /* -------------- */
+/* hover & active */
 /* -------------- */
 
 /* hover & active btn */
