--- a/03-css/style.css
+++ b/03-css/style.css
@@ -199,13 +199,14 @@ canvas {
 #color-a {
     top: 3px;
     left: 3px;
-    background-color: #fff; /* default color !!! */
+    background-color: #fff; /* default color, fill !!! */
 }
+
 
 #color-b {
     bottom: 3px;
     right: 3px;
-    background-color: #000; /* default color !!!*/
+    background-color: #000; /* default color, line !!!*/
 }
 
 .selected-wrapper {
@@ -279,6 +280,24 @@ canvas {
     height: 22px;
 }
 
+/* display xy axis */
+/* .axis-wrapper {
+    padding-left: 50px;
+    width: 100%;
+    height: 28px;
+}
+
+#axis-box {
+    width: 76px;
+    height: 28px;
+    border: 3px solid #cfcfcf;
+    border-style: ridge;
+}
+
+.style-btn span {
+    font-size: 10px;
+    color: #111;
+} */
 
 
 /* -------------- */
