--- a/03-css/style.css
+++ b/03-css/style.css
@@ -98,7 +98,7 @@ body {
 }
 
 #f-sec2 {
-    padding-top: 20px; 
+    padding-top: 30px; 
 }
 
 .feature-box {
@@ -145,7 +145,7 @@ canvas {
 
 .style-overflow {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     flex-flow: row nowrap;
     overflow-x: scroll;
@@ -260,8 +260,8 @@ input[type="color"]::-webkit-color-swatch {
     justify-content: flex-end;
     align-items: flex-start;
     flex-flow: row nowrap;
-    padding-left: 50px;
-    margin-top: 14px;
+    padding-left: 30px;
+    padding-right: 50px;
 }
 
 .style-box {
@@ -279,8 +279,10 @@ input[type="color"]::-webkit-color-swatch {
 }
 
 .textbox-wrapper {
-    padding-left: 50px;
+    padding-right: 50px;
+
     display: none;
+    margin-top: 14px;
 }
 
 #text_cnv {
@@ -353,3 +355,50 @@ input[type="color"]::-webkit-color-swatch {
 
 /* -------------- */
 /* -------------- */
+
+
+/* -------------- */
+/*    tooltips    */
+/* -------------- */
+
+.guide-wrapper {
+    margin-top: 14px;
+    padding: 0;
+    margin-right: 10px;
+    width: 240px;
+    text-align: right;
+    display: none;
+    float: right
+}
+
+
+.guide-box {
+    text-align: left;
+    padding: 0px;
+    margin-right: 10px;
+    width: 100%;
+    height: 28px;
+    border: 3px solid #cfcfcf;
+    border-style: ridge;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.guide-btn {
+    padding: 0 5px;
+    display: flex;
+    width: 100%;
+    justify-content: flex-start;
+    align-items: center;
+    flex-flow: row nowrap;
+}
+
+.guide-btn p {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    font-size: 12px;
+}
+
